# aletheia--core

./: .gitignore  LICENSE  README.md  agent_xray_watcher.py  generate_compliance_certificate.py  pyproject.toml  requirements.txt  sample_red_receipt.json  verify_ledger.py
.github/workflows/: publish.yml
tests/: test_causal_filter.py  test_causal_filter_edge.py  test_ledger.py  test_ledger_edge.py  test_receipts.py  test_receipts_edge.py  test_smoke_e2e.py
